[project]
name = "comfyui_lg_fft"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "torchvision", "numpy"]

[project.urls]
Repository = "https://github.com/LAOGOU-666/ComfyUI_LG_FFT"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_LG_FFT"
Icon = ""
